--- a/src/app/form/error-messages/error-messages.component.html
+++ b/src/app/form/error-messages/error-messages.component.html
@@ -1,3 +1,6 @@
 <ul class="error-messages">
-  <li *ngFor="let message of messages">{{ message }}</li>
+  <li *ngFor="let message of messages">
+    <app-error-message *ngIf="errorsMap[message.errorType]" [errorString]="message.errorString"></app-error-message>
+  </li>
 </ul>
+<button (click)="test()">test</button>
